@@ -4,10 +4,13 @@ import com.coyjiv.isocial.auth.EmailPasswordAuthProvider;
 import com.coyjiv.isocial.dao.LikeRepository;
 import com.coyjiv.isocial.domain.Like;
 import com.coyjiv.isocial.domain.LikeableEntity;
+import com.coyjiv.isocial.domain.NotificationEvent;
 import com.coyjiv.isocial.dto.respone.like.LikeInfoResponseDto;
+import com.coyjiv.isocial.dto.respone.page.PageWrapper;
 import com.coyjiv.isocial.dto.respone.user.UserProfileResponseDto;
 import com.coyjiv.isocial.dto.respone.user.UserSearchResponseDto;
 import com.coyjiv.isocial.exceptions.EntityNotFoundException;
+import com.coyjiv.isocial.service.notifications.INotificationService;
 import com.coyjiv.isocial.service.user.IUserService;
 import com.coyjiv.isocial.service.websocket.IWebsocketService;
 import com.coyjiv.isocial.transfer.like.LikeDtoResponseMapper;
@@ -20,6 +23,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Objects;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
@@ -28,7 +32,7 @@ public class LikeService implements ILikeService {
   private final LikeRepository likeRepository;
   private final IUserService userService;
   private final IWebsocketService websocketService;
-  private final LikeDtoResponseMapper likeDtoResponseMapper;
+  private final INotificationService notificationService;
   private final EmailPasswordAuthProvider emailPasswordAuthProvider;
 
   @Transactional
@@ -68,13 +72,15 @@ public class LikeService implements ILikeService {
       throw new EntityNotFoundException("Entity id is required");
     }
     Pageable topTen = PageRequest.of(0, 10);
+
+
     return likeRepository.getRecentLikes(entityId, entityType, topTen);
   }
 
   @Transactional
   @Override
-  public List<UserProfileResponseDto> getUsersWhoLikedEntity(Long entityId, LikeableEntity entityType)
-    throws EntityNotFoundException {
+  public PageWrapper<UserProfileResponseDto> getUsersWhoLikedEntity(Long entityId, LikeableEntity entityType)
+          throws EntityNotFoundException {
     if (entityType == null) {
       throw new EntityNotFoundException("Entity type is required");
     }
@@ -83,11 +89,12 @@ public class LikeService implements ILikeService {
     }
     int pageSize = 1000; // Example large enough value, adjust based on expected data size
 
-    Page<Like> page = likeRepository.findByEntityIdAndEntityType(entityId, entityType, PageRequest.of(0, pageSize));
+    Page<Like> page = likeRepository.findByEntityIdAndEntityType(entityId, entityType,
+            PageRequest.of(0, pageSize));
     List<Like> likes = page.getContent();
 
     // Convert likes to UserProfileResponseDto, handling possible EntityNotFoundException
-    return likes.stream().map(like -> {
+    List<UserProfileResponseDto> dtos = likes.stream().map(like -> {
       try {
         return userService.findActiveById(like.getUserId());
       } catch (EntityNotFoundException e) {
@@ -95,7 +102,11 @@ public class LikeService implements ILikeService {
         return null;
       }
     }).filter(Objects::nonNull) // Remove nulls in case of not found users
-      .distinct().collect(Collectors.toList());
+            .distinct().toList();
+
+    boolean hasNext = page.hasNext();
+
+    return new PageWrapper<>(dtos, hasNext);
   }
 
 
@@ -104,9 +115,12 @@ public class LikeService implements ILikeService {
   public void toggleLike(Long entityId, LikeableEntity entityType) {
     Long userId = emailPasswordAuthProvider.getAuthenticationPrincipal();
 
-    boolean exists = likeRepository.existsByUserIdAndEntityIdAndEntityType(userId, entityId, entityType);
-    if (exists) {
+    Optional<Like> optionalLike  = likeRepository.findByUserIdAndEntityIdAndEntityType(userId, entityId, entityType);
+
+    if (optionalLike.isPresent()) {
+      Like like = optionalLike.get();
       likeRepository.deleteByUserIdAndEntityIdAndEntityType(userId, entityId, entityType);
+      notificationService.delete(userId,entityId, like.getCreationDate());
     } else {
       Like like = new Like();
       like.setUserId(userId);
